--- a/09_pandas/09.pandas.ipynb
+++ b/09_pandas/09.pandas.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,226 +52,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'hkaugxjxtdd'"
+       "'yztnprvsdxd'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "random_string()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>brewery_name</th>\n",
-       "      <th>type</th>\n",
-       "      <th>address</th>\n",
-       "      <th>website</th>\n",
-       "      <th>state</th>\n",
-       "      <th>state_breweries</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>Valley Brewing Co.</td>\n",
-       "      <td>Brewpub</td>\n",
-       "      <td>PO Box 4653, Stockton, California, 95204</td>\n",
-       "      <td>http://www.valleybrew.com/</td>\n",
-       "      <td>california</td>\n",
-       "      <td>284</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>Valley Brewing Co.</td>\n",
-       "      <td>Brewpub</td>\n",
-       "      <td>157 Adams St., Stockton, California, 95204</td>\n",
-       "      <td>http://www.valleybrew.com/</td>\n",
-       "      <td>california</td>\n",
-       "      <td>284</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>Valley Brewing Co</td>\n",
-       "      <td>Microbrewery</td>\n",
-       "      <td>1950 W Freemont, Stockton, California, 95203</td>\n",
-       "      <td>http://www.valleybrew.com/</td>\n",
-       "      <td>california</td>\n",
-       "      <td>284</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>Ukiah Brewing Company</td>\n",
-       "      <td>Brewpub</td>\n",
-       "      <td>102 S. State St., Ukiah, California, 95482</td>\n",
-       "      <td>http://www.ukiahbrewingco.com/</td>\n",
-       "      <td>california</td>\n",
-       "      <td>284</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>Tustin Brewing Co.</td>\n",
-       "      <td>Brewpub</td>\n",
-       "      <td>13011 Newport Ave. #100, Tustin, California, 9...</td>\n",
-       "      <td>http://www.tustinbrewery.com/</td>\n",
-       "      <td>california</td>\n",
-       "      <td>284</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2402</td>\n",
-       "      <td>Capitol City Brewing Company (Capitol Hill)</td>\n",
-       "      <td>Brewpub</td>\n",
-       "      <td>2 Massachusetts Ave., Washington, DC, Washingt...</td>\n",
-       "      <td>http://www.capcitybrew.com/</td>\n",
-       "      <td>washington-dc</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2403</td>\n",
-       "      <td>Capitol City Brewing Company</td>\n",
-       "      <td>Brewpub</td>\n",
-       "      <td>1100 New York Ave. NW, Washington, DC, Washing...</td>\n",
-       "      <td>http://www.capcitybrew.com/</td>\n",
-       "      <td>washington-dc</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2404</td>\n",
-       "      <td>Old Harbor Brewery</td>\n",
-       "      <td>Brewpub</td>\n",
-       "      <td>Gen del Valle 1021 Urb Delicias, San Juan, PR,...</td>\n",
-       "      <td>http://oldharborbrewery.com/</td>\n",
-       "      <td>puerto-rico</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2405</td>\n",
-       "      <td>Isla Verde Brewing Co.</td>\n",
-       "      <td>Microbrewery</td>\n",
-       "      <td>Condiminum Torrimar Plaza # 14B, Guaynabo , PR...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>puerto-rico</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2406</td>\n",
-       "      <td>Cerveceria India Inc</td>\n",
-       "      <td>RegionalBrewery</td>\n",
-       "      <td>PO Box 1690, Mayaguez, PR, 681</td>\n",
-       "      <td>...</td>\n",
-       "      <td>puerto-rico</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2407 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                     brewery_name             type  \\\n",
-       "0                              Valley Brewing Co.          Brewpub   \n",
-       "1                              Valley Brewing Co.          Brewpub   \n",
-       "2                               Valley Brewing Co     Microbrewery   \n",
-       "3                           Ukiah Brewing Company          Brewpub   \n",
-       "4                              Tustin Brewing Co.          Brewpub   \n",
-       "...                                           ...              ...   \n",
-       "2402  Capitol City Brewing Company (Capitol Hill)          Brewpub   \n",
-       "2403                 Capitol City Brewing Company          Brewpub   \n",
-       "2404                           Old Harbor Brewery          Brewpub   \n",
-       "2405                       Isla Verde Brewing Co.     Microbrewery   \n",
-       "2406                         Cerveceria India Inc  RegionalBrewery   \n",
-       "\n",
-       "                                                address  \\\n",
-       "0              PO Box 4653, Stockton, California, 95204   \n",
-       "1            157 Adams St., Stockton, California, 95204   \n",
-       "2          1950 W Freemont, Stockton, California, 95203   \n",
-       "3            102 S. State St., Ukiah, California, 95482   \n",
-       "4     13011 Newport Ave. #100, Tustin, California, 9...   \n",
-       "...                                                 ...   \n",
-       "2402  2 Massachusetts Ave., Washington, DC, Washingt...   \n",
-       "2403  1100 New York Ave. NW, Washington, DC, Washing...   \n",
-       "2404  Gen del Valle 1021 Urb Delicias, San Juan, PR,...   \n",
-       "2405  Condiminum Torrimar Plaza # 14B, Guaynabo , PR...   \n",
-       "2406                     PO Box 1690, Mayaguez, PR, 681   \n",
-       "\n",
-       "                                                website          state  \\\n",
-       "0                            http://www.valleybrew.com/     california   \n",
-       "1                            http://www.valleybrew.com/     california   \n",
-       "2                            http://www.valleybrew.com/     california   \n",
-       "3                        http://www.ukiahbrewingco.com/     california   \n",
-       "4                         http://www.tustinbrewery.com/     california   \n",
-       "...                                                 ...            ...   \n",
-       "2402                        http://www.capcitybrew.com/  washington-dc   \n",
-       "2403                        http://www.capcitybrew.com/  washington-dc   \n",
-       "2404                       http://oldharborbrewery.com/    puerto-rico   \n",
-       "2405                                                ...    puerto-rico   \n",
-       "2406                                                ...    puerto-rico   \n",
-       "\n",
-       "      state_breweries  \n",
-       "0                 284  \n",
-       "1                 284  \n",
-       "2                 284  \n",
-       "3                 284  \n",
-       "4                 284  \n",
-       "...               ...  \n",
-       "2402                9  \n",
-       "2403                9  \n",
-       "2404                3  \n",
-       "2405                3  \n",
-       "2406                3  \n",
-       "\n",
-       "[2407 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "brew"
    ]
   },
   {
@@ -294,115 +90,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>brewery_name</th>\n",
-       "      <th>type</th>\n",
-       "      <th>address</th>\n",
-       "      <th>website</th>\n",
-       "      <th>state</th>\n",
-       "      <th>state_breweries</th>\n",
-       "      <th>numero_aleatorio</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>584</td>\n",
-       "      <td>C.B. and Potts/Big Horn Brewery- Englewood</td>\n",
-       "      <td>Brewpub</td>\n",
-       "      <td>6575 Greenwood Plaza Blvd., Englewood, Colorad...</td>\n",
-       "      <td>http://www.cbpotts.com/</td>\n",
-       "      <td>colorado</td>\n",
-       "      <td>182</td>\n",
-       "      <td>jajajaja</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>599</td>\n",
-       "      <td>Big Horn Brewery</td>\n",
-       "      <td>Brewpub</td>\n",
-       "      <td>6575 Greenwood Plaza Blvd., Englewood, Colorad...</td>\n",
-       "      <td>http://www.theram.com/</td>\n",
-       "      <td>colorado</td>\n",
-       "      <td>182</td>\n",
-       "      <td>jajajaja</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1442</td>\n",
-       "      <td>John Harvards Brew House - Lake Grove</td>\n",
-       "      <td>Brewpub</td>\n",
-       "      <td>2093 Smith Haven Plaza, Lake Grove, New York, ...</td>\n",
-       "      <td>http://www.johnharvards.com/</td>\n",
-       "      <td>new-york</td>\n",
-       "      <td>107</td>\n",
-       "      <td>jajajaja</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1464</td>\n",
-       "      <td>Defiant Brewing Co.</td>\n",
-       "      <td>Microbrewery</td>\n",
-       "      <td>6 E Dexter Plaza, Pearl River, New York, 10965</td>\n",
-       "      <td>http://www.defiantbrewing.com/</td>\n",
-       "      <td>new-york</td>\n",
-       "      <td>107</td>\n",
-       "      <td>jajajaja</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                    brewery_name          type  \\\n",
-       "584   C.B. and Potts/Big Horn Brewery- Englewood       Brewpub   \n",
-       "599                             Big Horn Brewery       Brewpub   \n",
-       "1442       John Harvards Brew House - Lake Grove       Brewpub   \n",
-       "1464                         Defiant Brewing Co.  Microbrewery   \n",
-       "\n",
-       "                                                address  \\\n",
-       "584   6575 Greenwood Plaza Blvd., Englewood, Colorad...   \n",
-       "599   6575 Greenwood Plaza Blvd., Englewood, Colorad...   \n",
-       "1442  2093 Smith Haven Plaza, Lake Grove, New York, ...   \n",
-       "1464     6 E Dexter Plaza, Pearl River, New York, 10965   \n",
-       "\n",
-       "                             website     state  state_breweries  \\\n",
-       "584          http://www.cbpotts.com/  colorado              182   \n",
-       "599           http://www.theram.com/  colorado              182   \n",
-       "1442    http://www.johnharvards.com/  new-york              107   \n",
-       "1464  http://www.defiantbrewing.com/  new-york              107   \n",
-       "\n",
-       "     numero_aleatorio  \n",
-       "584          jajajaja  \n",
-       "599          jajajaja  \n",
-       "1442         jajajaja  \n",
-       "1464         jajajaja  "
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "brew[\n",
     "    (brew[\"address\"].str.lower().str.contains(\"plaza\"))\n",
@@ -6904,7 +6594,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
