--- a/10_apis_flask/00_pruebas_api.ipynb
+++ b/10_apis_flask/00_pruebas_api.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# API\n",
     "\n",
-    "![](https://www.flimper.com/hubfs/como-crear-una-api.jpg)"
+    "![](https://www.academiaweb.ca/wp-content/uploads/2020/07/api-visual.png)"
    ]
   },
   {
@@ -37,9 +37,7 @@
     "**Métodos:**\n",
     "\n",
     "`GET`: Leer información  \n",
-    "`POST`: Subir información\n",
-    "\n",
-    "![](https://img.deusm.com/darkreading/MarilynCohodas/TraditionalVModern.jpg)"
+    "`POST`: Subir información"
    ]
   },
   {
@@ -258,34 +256,6 @@
     "\n",
     "datos"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -541,7 +511,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
