--- a/11_concurrencia_paralelismo/00_concurrency_multiprocessing.ipynb
+++ b/11_concurrencia_paralelismo/00_concurrency_multiprocessing.ipynb
@@ -835,6 +835,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import zipfile\n",
+    "import os\n",
+    "\n",
+    "with open(\"archivo_ejercicio.zip\", \"wb\") as f:\n",
+    "    f.write(\n",
+    "        requests.get(\n",
+    "            \"https://github.com/polyrand/teach/raw/master/11_concurrencia_paralelismo/archivo_ejercicio.zip\"\n",
+    "        ).content\n",
+    "    )\n",
+    "\n",
+    "with zipfile.ZipFile(\"archivo_ejercicio.zip\", \"r\") as zip_ref:\n",
+    "    zip_ref.extractall()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
