--- a/08_generadores/00_generators.ipynb
+++ b/08_generadores/00_generators.ipynb
@@ -819,6 +819,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Ejercicio: crear varios generadores:\n",
+    "\n",
+    "1. Cada linea del archivo\n",
+    "2. Cada elemento del generador `1`, convertido a numero entero\n",
+    "3. Cada elemento al cuadrado `**2` del generador `2`\n",
+    "\n",
+    "  * ¿Cuánto suman todos esos números que hemos elevado al cuadrado?\n",
+    "\n",
+    "4. Crear una función generadora que me devuelva todos los múltiplos (infinitos) de un número."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from base64 import b64decode, b64encode\n",
+    "import requests\n",
+    "\n",
+    "u1 = \"aHR0cHM6Ly9yYXcuZ2l0aHVidXNlcmNvbnRlbnQuY29tL3BvbHlyYW5kL2FkdmVudG9mY29kZV8yMDIwL21haW4vZDAxL2lucHV0X3AxLnR4dA==\"\n",
+    "\n",
+    "\n",
+    "with open(\"input.txt\", \"w\") as f:\n",
+    "    f.write(requests.get(b64decode(u1).decode()).text)\n",
+    "\n",
+    "\n",
+    "with open(\"input.txt\") as f:\n",
+    "    data = f.read()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Example (beer)\n",
     "\n",
     "> source?  \n",
@@ -1555,7 +1590,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
