add logging, simplify threading examples

--- a/11_concurrencia_paralelismo/00_concurrency_multiprocessing.ipynb
+++ b/11_concurrencia_paralelismo/00_concurrency_multiprocessing.ipynb
@@ -137,20 +137,18 @@
     "import time\n",
     "\n",
     "\n",
-    "def download_site(url, session):\n",
-    "    with session.get(url) as response:\n",
-    "        print(f\"Read {len(response.content)} from {url}\")\n",
-    "\n",
-    "\n",
-    "def download_all_sites(sites):\n",
-    "    with requests.Session() as session:\n",
-    "        for url in sites:\n",
-    "            download_site(url, session)\n",
+    "def download_site(url):\n",
+    "    response = requests.get(url)\n",
+    "    return len(response.content)\n",
     "\n",
     "\n",
     "start_time = time.time()\n",
-    "download_all_sites(sites)\n",
+    "\n",
+    "for url int sites:\n",
+    "    download_site(url)\n",
+    "\n",
     "duration = time.time() - start_time\n",
+    "\n",
     "print(duration)"
    ]
   },
@@ -193,34 +191,20 @@
    "source": [
     "from concurrent.futures import ThreadPoolExecutor\n",
     "import requests\n",
-    "import threading\n",
     "import time\n",
-    "\n",
-    "# Threading.local() creates an object that look like a global but is specific to each individual thread.\n",
-    "thread_local = threading.local()\n",
-    "\n",
-    "\n",
-    "# requests.Session() is not thread-safe\n",
-    "def get_session():\n",
-    "    if not hasattr(thread_local, \"session\"):\n",
-    "        thread_local.session = requests.Session()\n",
-    "    return thread_local.session\n",
     "\n",
     "\n",
     "def download_site(url):\n",
-    "    session = get_session()\n",
-    "    with session.get(url) as response:\n",
-    "        print(f\"Read {len(response.content)} from {url}\")\n",
-    "\n",
-    "\n",
-    "def download_all_sites(sites):\n",
-    "    # with -> create and free thread pool\n",
-    "    with ThreadPoolExecutor(max_workers=5) as executor:\n",
-    "        executor.map(download_site, sites)\n",
+    "    response = requests.get(url)\n",
+    "    return len(response.content)\n",
     "\n",
     "\n",
     "start_time = time.time()\n",
-    "download_all_sites(sites)\n",
+    "\n",
+    "with ThreadPoolExecutor(max_workers=5) as executor:\n",
+    "    todos = [resultado for resultado in executor.map(download_site, sites)]\n",
+    "\n",
+    "\n",
     "duration = time.time() - start_time\n",
     "print(duration)"
    ]
@@ -232,69 +216,6 @@
     "La parte del `Thread`. Eso es solo un hilo de procesamiento que mencionamos anteriormente. `Pool` es donde comienza a ponerse interesante. Este objeto va a crear un grupo de subprocesos, cada uno de los cuales puede ejecutarse simultáneamente. Finalmente, el `Executor` es la parte que controlará cómo y cuándo se ejecutará cada uno de los hilos del grupo.\n",
     "\n",
     "![](https://files.realpython.com/media/Threading.3eef48da829e.png)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "500000"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "5000 * 100"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"sadasd.ttxt\", \"r\") as f:\n",
-    "    texto = f.read()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
-   "outputs": [],
-   "source": [
-    "class Lock:\n",
-    "    \n",
-    "    def __init__(self, name):\n",
-    "        self.name = name\n",
-    "        self.acquired = False\n",
-    "        \n",
-    "    def acquire(self):\n",
-    "        self.acquired = True\n",
-    "        return True\n",
-    "    \n",
-    "    def __enter__(self):\n",
-    "        try:\n",
-    "            self.acquire()\n",
-    "        finally:\n",
-    "            self.release()\n",
-    "        print(\"entrando\")\n",
-    "        return self\n",
-    "        \n",
-    "    def __exit__(self):\n",
-    "        print(\"saliendi\")\n",
-    "        return self"
    ]
   },
   {
@@ -326,6 +247,26 @@
     "\n",
     "with concurrent.futures.ThreadPoolExecutor(max_workers=50) as executor:\n",
     "    executor.map(increment_counter, fake_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "500000"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "5000 * 100"
    ]
   },
   {
@@ -808,7 +749,7 @@
     "* Crear una función que covierta una imagen a 128x128. Usar la librería **Pillow**, ya viene instalada en vuestra distribución de Anaconda creo.\n",
     "\n",
     "```python\n",
-    "import PIL\n",
+    "from PIL import Image\n",
     "````\n",
     "\n",
     "* Tras convertir una imagen, todas deben estar guardadaes en una misma carpeta. Por ejemplo al final habrá una carpeta que se llame \"miniaturas\" que contendrá todas las imágenes convertidas.\n",
