add double comp example

--- a/01_comprehensions_pep8/comprehensions.ipynb
+++ b/01_comprehensions_pep8/comprehensions.ipynb
@@ -1212,6 +1212,88 @@
    "source": [
     "### CODE"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Comprensiones múltiples**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['A', 'B', 'C']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds = [{\"a\": 1}, {\"b\": 2}, {\"c\": 3}]\n",
+    "\n",
+    "[a.upper() for d in ds for a in d.keys()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cuadrado(x):\n",
+    "\n",
+    "    return x ** 2\n",
+    "\n",
+    "\n",
+    "listas_num = [\n",
+    "    [4, 6, 5, 3, 4, 8, 5, 9, 6, 6, 4, 6, 6, 3, 3],\n",
+    "    [9, 5, 9, 0, 10, 3, 10, 9, 10, 8, 10, 1, 7, 5, 4],\n",
+    "    [1, 6, 9, 7, 7, 7, 6, 5, 8, 5, 10, 10, 10, 9, 10],\n",
+    "    [9, 6, 8, 3, 10, 4, 4, 4, 8, 7, 1, 5, 7, 6, 9],\n",
+    "    [8, 10, 2, 7, 6, 8, 6, 8, 0, 8, 8, 3, 4, 0, 3],\n",
+    "]\n",
+    "\n",
+    "resultado_loop = []\n",
+    "for lista in listas_num:\n",
+    "    if 7 in lista:\n",
+    "        for num in lista:\n",
+    "            if num > 0:\n",
+    "                resultado_loop.append(cuadrado(num))\n",
+    "\n",
+    "\n",
+    "#                            |---<---<-----<---<-----|\n",
+    "#                           |                       |\n",
+    "resultado_comp = [\n",
+    "    cuadrado(num) for lista in listas_num if 7 in lista for num in lista if num > 0\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert resultado_loop == resultado_comp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import random\n",
+    "# [[random.randint(0,10) for _ in range(15)] for _ in range(5)]"
+   ]
   }
  ],
  "metadata": {
