--- a/02_json-yaml/00_json_yaml.ipynb
+++ b/02_json-yaml/00_json_yaml.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os"
+    "import os\n",
+    "import requests"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +36,7 @@
     "        with open(fn, \"w\") as f:\n",
     "            f.write(\n",
     "                requests.get(\n",
-    "                    f\"fttps://raw.githubusercontent.com/polyrand/teach/master/02_json-yaml/{fn}\"\n",
+    "                    f\"https://raw.githubusercontent.com/polyrand/teach/master/02_json-yaml/{fn}\"\n",
     "                ).text\n",
     "            )\n",
     "            \n",
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,16 +90,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "persona = {\n",
     "    \"nombre\": \"oriol\",\n",
     "    \"edad\": 28,\n",
-    "    \"casado\": True,\n",
-    "    \"divorciado\": False,\n",
-    "    \"hijos\": (\"ricardito\", \"ian\"),\n",
+    "    \"trabajo\": True,\n",
+    "    \"hijos\": (\"maria\", \"ian\"),\n",
     "    \"mascotas\": None,\n",
     "    \"ordenadores\": [\n",
     "        {\"modelo\": \"macbook\", \"versionpython\": 3.7},\n",
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
        "'macbook'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,14 +190,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"nombre\": \"oriol\", \"edad\": 28, \"casado\": true, \"divorciado\": false, \"hijos\": [\"ricardito\", \"ian\"], \"mascotas\": null, \"ordenadores\": [{\"modelo\": \"macbook\", \"versionpython\": 3.7}, {\"modelo\": \"imac\", \"versionpython\": 3.8}]}\n"
+      "{\"nombre\": \"oriol\", \"edad\": 28, \"trabajo\": true, \"hijos\": [\"maria\", \"ian\"], \"mascotas\": null, \"ordenadores\": [{\"modelo\": \"macbook\", \"versionpython\": 3.7}, {\"modelo\": \"imac\", \"versionpython\": 3.8}]}\n"
      ]
     }
    ],
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -334,15 +334,14 @@
       "text/plain": [
        "{'nombre': 'oriol',\n",
        " 'edad': 28,\n",
-       " 'casado': True,\n",
-       " 'divorciado': False,\n",
-       " 'hijos': ['ricardito', 'ian'],\n",
+       " 'trabajo': True,\n",
+       " 'hijos': ['maria', 'ian'],\n",
        " 'mascotas': None,\n",
        " 'ordenadores': [{'modelo': 'macbook', 'versionpython': 3.7},\n",
        "  {'modelo': 'imac', 'versionpython': 3.8}]}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,51 +370,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open(\"jsondata.json\", \"r\") as archivo:\n",
     "    datos = archivo.read()\n",
-    "    a = json.loads(datos)"
+    "    \n",
+    "a = json.loads(datos)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open(\"jsondata.json\", \"r\") as archivo:\n",
     "\n",
     "    a = json.load(archivo)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'nombre': 'oriol',\n",
-       " 'edad': 28,\n",
-       " 'casado': True,\n",
-       " 'divorciado': False,\n",
-       " 'hijos': ['ricardito', 'ian'],\n",
-       " 'mascotas': None,\n",
-       " 'ordenadores': [{'modelo': 'macbook', 'versionpython': 3.7},\n",
-       "  {'modelo': 'imac', 'versionpython': 3.8}]}"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "json.loads(datos)"
    ]
   },
   {
@@ -427,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -455,21 +428,65 @@
       "text/plain": [
        "{'nombre': 'oriol',\n",
        " 'edad': 28,\n",
-       " 'casado': True,\n",
-       " 'divorciado': False,\n",
-       " 'hijos': ['ricardito', 'ian'],\n",
+       " 'trabajo': True,\n",
+       " 'hijos': ['maria', 'ian'],\n",
        " 'mascotas': None,\n",
        " 'ordenadores': [{'modelo': 'macbook', 'versionpython': 3.7},\n",
        "  {'modelo': 'imac', 'versionpython': 3.8}]}"
       ]
      },
-     "execution_count": null,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Ejercicio**\n",
+    "\n",
+    "Crear un archivo `mis_funciones_json.py` y escribir 2 funciones. Una para convertir un objeto de Python a JSON y guardarlo en un archivo, y otra para leer los contenidos de un archivo JSON y crear un objeto de Python:\n",
+    "\n",
+    "\n",
+    "```python\n",
+    "import json\n",
+    "\n",
+    "import json\n",
+    "\n",
+    "## CREAR 2 funciones\n",
+    "\n",
+    "def cargar_json(ruta_archivo):\n",
+    "\n",
+    "    with open(..., \"r\") as f:\n",
+    "        ...\n",
+    "\n",
+    "    obj = ...\n",
+    "\n",
+    "    return obj\n",
+    "\n",
+    "def guardar_json(obj, ruta_archivo):\n",
+    "\n",
+    "    json_str = json.dumps(...)\n",
+    "\n",
+    "    with open(..., \"w\") as f:\n",
+    "        f.write(...)\n",
+    "\n",
+    "    return json_str\n",
+    "\n",
+    "```\n",
+    "\n",
+    "Importar ambas funciones en nuestro cuaderno:\n",
+    "\n",
+    "```python\n",
+    "from mis_funciones_json import cargar_json, guardar_json\n",
+    "```\n",
+    "\n",
+    "Y utilizarlas."
    ]
   },
   {
