add classes nb, fix exercises and add requests POST example

--- a/03_requests/00_requests.ipynb
+++ b/03_requests/00_requests.ipynb
@@ -209,6 +209,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Post**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r = requests.post(\"https://jsonplaceholder.typicode.com/posts\", json={\"title\": \"foo\", \"id\": 101, \"body\": \"bar\", \"userId\": 1})\n",
+    "\n",
+    "data = r.json()\n",
+    "\n",
+    "print(f\"Se ha creado el Elemento (To-Do) con ID: {data['id']}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Extra**\n",
     "\n",
     "Otra opción sería que nuestra petición nos devuelva directamente texto plano (no en formato json). En ese caso podemos usar `.content` para obtenerlo."
@@ -504,18 +524,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "completados = []\n",
-    "\n",
-    "for elemento in data:\n",
-    "\n",
-    "    if elemento[\"completed\"]:\n",
-    "        # print(elemento)\n",
-    "        completados.append(elemento[\"id\"])"
+    "**Mas ejemplos**"
    ]
   },
   {
@@ -849,115 +861,6 @@
    ],
    "source": [
     "[elemento[\"id\"] for elemento in data if elemento[\"completed\"]] # == completados"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n",
-      "Elemento completado: True\n"
-     ]
-    }
-   ],
-   "source": [
-    "for elemento in data:\n",
-    "    \n",
-    "    if elemento[\"id\"] in completados:\n",
-    "        print(f\"Elemento completado: {elemento['completed']}\")"
    ]
   },
   {
