--- a/01_comprehensions_pep8/comprehensions.ipynb
+++ b/01_comprehensions_pep8/comprehensions.ipynb
@@ -663,397 +663,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'python': False,\n",
-       " '2.0': False,\n",
-       " 'tomó': False,\n",
-       " 'característica': True,\n",
-       " 'mayor': False,\n",
-       " 'lenguaje': False,\n",
-       " 'programación': True,\n",
-       " 'funcional': True,\n",
-       " 'haskell:': False,\n",
-       " 'listas': True,\n",
-       " 'comprensión.': True,\n",
-       " 'sintaxis': True,\n",
-       " 'construcción': True,\n",
-       " 'similar': True,\n",
-       " 'haskell,': False,\n",
-       " 'salvo': False,\n",
-       " 'preferencia': True,\n",
-       " 'caracteres': False,\n",
-       " 'puntuación': True,\n",
-       " 'palabras': False,\n",
-       " 'claves': False,\n",
-       " 'alfabéticas.': True,\n",
-       " 'introdujo': True,\n",
-       " 'además': False,\n",
-       " 'sistema': True,\n",
-       " 'recolección': True,\n",
-       " 'basura': False,\n",
-       " 'capaz': False,\n",
-       " 'recolectar': False,\n",
-       " 'referencias': True,\n",
-       " 'cíclicas.13': True,\n",
-       " '1991,': False,\n",
-       " 'van': False,\n",
-       " 'rossum': False,\n",
-       " 'publicó': True,\n",
-       " 'código': True,\n",
-       " 'versión': True,\n",
-       " '0.9.0': False,\n",
-       " 'alt.sources.9\\u200b': False,\n",
-       " 'etapa': False,\n",
-       " 'desarrollo': False,\n",
-       " 'presentes': False,\n",
-       " 'clases': False,\n",
-       " 'herencia,': True,\n",
-       " 'manejo': False,\n",
-       " 'excepciones,': True,\n",
-       " 'funciones': True,\n",
-       " 'tipos': True,\n",
-       " 'modulares,': False,\n",
-       " 'como:': False,\n",
-       " 'str,': False,\n",
-       " 'list,': True,\n",
-       " 'dict,': True,\n",
-       " 'otros.': False,\n",
-       " 'lanzamiento': True,\n",
-       " 'inicial': True,\n",
-       " 'aparecía': False,\n",
-       " 'módulos': False,\n",
-       " 'adoptado': False,\n",
-       " 'modula-3;': False,\n",
-       " 'describe': True,\n",
-       " 'módulo': False,\n",
-       " '«una': False,\n",
-       " 'mayores': False,\n",
-       " 'unidades': True,\n",
-       " 'python».4\\u200b': False,\n",
-       " 'modelo': False,\n",
-       " 'excepciones': True,\n",
-       " 'parecido': True,\n",
-       " 'modula-3,': False,\n",
-       " 'adición': True,\n",
-       " 'cláusula': False,\n",
-       " 'else.5\\u200b': False,\n",
-       " 'año': False,\n",
-       " '1994': False,\n",
-       " 'formó': False,\n",
-       " 'comp.lang.python,': False,\n",
-       " 'foro': False,\n",
-       " 'discusión': True,\n",
-       " 'principal': True,\n",
-       " 'python,': False,\n",
-       " 'marcando': False,\n",
-       " 'hito': True,\n",
-       " 'crecimiento': True,\n",
-       " 'grupo': False,\n",
-       " 'usuarios': True,\n",
-       " 'lenguaje.': False,\n",
-       " 'alcanzó': False,\n",
-       " '1.0': False,\n",
-       " 'enero': False,\n",
-       " '1994.': False,\n",
-       " 'herramientas': True,\n",
-       " 'funcional:': True,\n",
-       " 'lambda,': False,\n",
-       " 'reduce,': False,\n",
-       " 'filter': True,\n",
-       " 'map.': False,\n",
-       " 'explicó': True,\n",
-       " '«hace': False,\n",
-       " '12': False,\n",
-       " 'años,': False,\n",
-       " 'adquirió': True,\n",
-       " 'reduce(),': False,\n",
-       " 'filter()': True,\n",
-       " 'map(),': False,\n",
-       " 'cortesía': False,\n",
-       " 'hacker': False,\n",
-       " 'informático': True,\n",
-       " 'lisp': True,\n",
-       " 'extrañaba': False,\n",
-       " 'envió': True,\n",
-       " 'parches».10\\u200b': False,\n",
-       " 'donante': False,\n",
-       " 'amrit': True,\n",
-       " 'prem;': False,\n",
-       " 'hace': False,\n",
-       " 'ninguna': True,\n",
-       " 'mención': True,\n",
-       " 'específica': True,\n",
-       " 'cualquier': True,\n",
-       " 'herencia': True,\n",
-       " 'notas': False,\n",
-       " 'lanzamiento.': True,\n",
-       " 'última': True,\n",
-       " 'liberada': True,\n",
-       " 'proveniente': True,\n",
-       " 'cwi': True,\n",
-       " '1.2.': False,\n",
-       " '1995,': False,\n",
-       " 'continuó': True,\n",
-       " 'trabajo': False,\n",
-       " 'corporation': True,\n",
-       " 'for': False,\n",
-       " 'national': True,\n",
-       " 'research': False,\n",
-       " 'initiatives': True,\n",
-       " '(cnri)': True,\n",
-       " 'reston,': False,\n",
-       " 'virginia,': True,\n",
-       " 'lanzó': False,\n",
-       " 'varias': True,\n",
-       " 'versiones': True,\n",
-       " 'software.': False,\n",
-       " 'estancia': True,\n",
-       " 'cnri,': True,\n",
-       " 'iniciativa': True,\n",
-       " 'computer': False,\n",
-       " 'programming': True,\n",
-       " 'everybody': False,\n",
-       " '(cp4e),': False,\n",
-       " 'fin': True,\n",
-       " 'hacer': False,\n",
-       " 'accesible': True,\n",
-       " 'gente,': False,\n",
-       " 'nivel': True,\n",
-       " \"'alfabetización'\": True,\n",
-       " 'básico': True,\n",
-       " 'lenguajes': False,\n",
-       " 'programación,': True,\n",
-       " 'alfabetización': True,\n",
-       " 'básica': True,\n",
-       " 'inglés': True,\n",
-       " 'habilidades': True,\n",
-       " 'matemáticas': True,\n",
-       " 'necesarias': True,\n",
-       " 'trabajadores.': False,\n",
-       " 'papel': False,\n",
-       " 'crucial': True,\n",
-       " 'proceso:': False,\n",
-       " 'debido': True,\n",
-       " 'orientación': True,\n",
-       " 'hacia': True,\n",
-       " 'limpia,': True,\n",
-       " 'idóneo,': True,\n",
-       " 'metas': False,\n",
-       " 'cp4e': False,\n",
-       " 'presentaban': False,\n",
-       " 'similitudes': True,\n",
-       " 'predecesor,': False,\n",
-       " 'abc.': False,\n",
-       " 'proyecto': False,\n",
-       " 'patrocinado': True,\n",
-       " 'darpa.11\\u200b': False,\n",
-       " '2007,': False,\n",
-       " 'inactivo,': True,\n",
-       " 'mientras': True,\n",
-       " 'intenta': True,\n",
-       " 'ser': False,\n",
-       " 'fácil': True,\n",
-       " 'aprender': False,\n",
-       " 'arcano': False,\n",
-       " 'semántica,': True,\n",
-       " 'alcanzando': False,\n",
-       " 'no-programadores,': False,\n",
-       " 'preocupación': True,\n",
-       " 'activa.12\\u200b': True,\n",
-       " '2000,': False,\n",
-       " 'equipo': True,\n",
-       " 'desarrolladores': False,\n",
-       " 'cambió': True,\n",
-       " 'beopen.com': False,\n",
-       " 'formar': False,\n",
-       " 'beopen': False,\n",
-       " 'pythonlabs.': False,\n",
-       " 'cnri': True,\n",
-       " 'pidió': True,\n",
-       " '1.6': False,\n",
-       " 'pública,': True,\n",
-       " 'continuando': True,\n",
-       " 'abandonó': False,\n",
-       " 'cnri;': True,\n",
-       " 'programa': False,\n",
-       " 'significativa': True,\n",
-       " 'cantidad': True,\n",
-       " 'traslapo.13\\u200b': False,\n",
-       " 'primer': True,\n",
-       " 'único': True,\n",
-       " 'beopen.com.': False,\n",
-       " 'después': False,\n",
-       " 'publicado': True,\n",
-       " 'beopen.com,': False,\n",
-       " 'guido': True,\n",
-       " 'pythonlabs': False,\n",
-       " 'unieron': True,\n",
-       " 'digital': True,\n",
-       " 'creations.': True,\n",
-       " 'cíclicas.13\\u200b': True,\n",
-       " 'posterior': True,\n",
-       " 'doble': False,\n",
-       " 'lanzamiento,': True,\n",
-       " 'dejó': False,\n",
-       " 'trabajar': False,\n",
-       " 'software': False,\n",
-       " 'comercial,': True,\n",
-       " 'quedó': False,\n",
-       " 'claro': False,\n",
-       " 'opción': True,\n",
-       " 'usar': False,\n",
-       " 'disponible': True,\n",
-       " 'bajo': False,\n",
-       " 'gnu': False,\n",
-       " 'gpl': False,\n",
-       " 'deseable.': False,\n",
-       " 'licencia': True,\n",
-       " 'usada': False,\n",
-       " 'entonces,': False,\n",
-       " 'license,': True,\n",
-       " 'incluía': True,\n",
-       " 'estipulando': True,\n",
-       " 'gobernada': False,\n",
-       " 'que,': False,\n",
-       " 'óptica': True,\n",
-       " 'abogados': False,\n",
-       " 'free': False,\n",
-       " 'foundation': True,\n",
-       " '(fsf),': False,\n",
-       " 'hacía': False,\n",
-       " 'incompatible': True,\n",
-       " 'gpl.': False,\n",
-       " 'fsf': False,\n",
-       " 'relacionaron': True,\n",
-       " 'cambiar': True,\n",
-       " 'libre': True,\n",
-       " 'hacerla': False,\n",
-       " 'compatible': True,\n",
-       " '2001,': False,\n",
-       " 'premiado': True,\n",
-       " 'award': False,\n",
-       " 'the': False,\n",
-       " 'advancement': False,\n",
-       " 'of': False,\n",
-       " '2.1': False,\n",
-       " 'derivado': True,\n",
-       " '1.6.1,': False,\n",
-       " 'así': False,\n",
-       " '2.0.': False,\n",
-       " 'renombrada': False,\n",
-       " 'a:': False,\n",
-       " 'license.': True,\n",
-       " 'código,': True,\n",
-       " 'documentación': True,\n",
-       " 'especificaciones': True,\n",
-       " 'añadidas,': True,\n",
-       " 'fecha': False,\n",
-       " 'alfa': False,\n",
-       " '2.1,': False,\n",
-       " 'dueño': False,\n",
-       " '(psf),': False,\n",
-       " 'organización': True,\n",
-       " 'ánimo': True,\n",
-       " 'lucro': False,\n",
-       " 'fundada': False,\n",
-       " 'tomando': False,\n",
-       " 'apache': False,\n",
-       " 'foundation.3\\u200b': True,\n",
-       " 'incluido': True,\n",
-       " 'implementación': True,\n",
-       " 'scoping': True,\n",
-       " 'parecida': True,\n",
-       " 'reglas': False,\n",
-       " 'static': True,\n",
-       " '(del': False,\n",
-       " 'scheme': False,\n",
-       " 'originador).14\\u200b': True,\n",
-       " 'innovación': True,\n",
-       " '2.2': False,\n",
-       " 'unificación': True,\n",
-       " '(tipos': True,\n",
-       " 'escritos': True,\n",
-       " 'c),': False,\n",
-       " 'python)': False,\n",
-       " 'dentro': False,\n",
-       " 'jerarquía.': False,\n",
-       " 'logró': False,\n",
-       " 'objetos': False,\n",
-       " 'puro': False,\n",
-       " 'consistente.15\\u200b': True,\n",
-       " 'agregados': False,\n",
-       " 'generadores': False,\n",
-       " 'inspirados': True,\n",
-       " 'icon.16\\u200b': True,\n",
-       " 'adiciones': True,\n",
-       " 'biblioteca': True,\n",
-       " 'estándar': False,\n",
-       " 'decisiones': True,\n",
-       " 'sintácticas': True,\n",
-       " 'influenciadas': True,\n",
-       " 'fuertemente': False,\n",
-       " 'java': False,\n",
-       " 'casos:': False,\n",
-       " 'package': False,\n",
-       " 'logging,17\\u200b': True,\n",
-       " 'introducido': True,\n",
-       " '2.3,': False,\n",
-       " 'basado': False,\n",
-       " 'log4j;': False,\n",
-       " 'parser': False,\n",
-       " 'sax,': False,\n",
-       " '2.0;': False,\n",
-       " 'threading,18\\u200b': True,\n",
-       " 'cuya': False,\n",
-       " 'clase': False,\n",
-       " 'thread': False,\n",
-       " 'expone': False,\n",
-       " 'subconjunto': False,\n",
-       " 'interfaz': True,\n",
-       " 'homónima': True,\n",
-       " 'java.': False,\n",
-       " '2,': False,\n",
-       " 'decir': True,\n",
-       " '2.7.x,': False,\n",
-       " 'oficialmente': True,\n",
-       " 'descontinuado': True,\n",
-       " '1': False,\n",
-       " '2020': False,\n",
-       " '(primero': True,\n",
-       " 'planeado': False,\n",
-       " '2015)': False,\n",
-       " 'publicarán': True,\n",
-       " 'parches': False,\n",
-       " 'seguridad': True,\n",
-       " 'mejoras': False,\n",
-       " 'él.19\\u200b20\\u200b': False,\n",
-       " 'final': True,\n",
-       " 'ciclo': True,\n",
-       " 'vida': True,\n",
-       " 'solo': False,\n",
-       " 'soporte': False,\n",
-       " 'rama': False,\n",
-       " '3.5.x21\\u200b': False,\n",
-       " 'posteriores.': True,\n",
-       " '1.6.1': False,\n",
-       " 'esencialmente': True,\n",
-       " 'mismo': True,\n",
-       " '1.6,': False,\n",
-       " 'pocos': False,\n",
-       " 'arreglos': False,\n",
-       " 'bugs,': False,\n",
-       " 'nueva': False,\n",
-       " 'gpl.3\\u200b': False}"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "{palabra: (\"i\" in palabra) for palabra in texto_procesado}"
    ]
@@ -1186,8 +796,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Escribir en un archivo el texto de la string `texto_raw`\n",
-    "* Escribir en un archivo las palabras de la lista `texto_procesado`. Teniendo una palabra en cada línea.\n",
+    "* Descargar la lista de *stop words* de la url utilizando `requests`\n",
+    "* Convertir la respuesta que obtenemos en una lista de Python\n",
+    "* Filtrar las palabras de `texto_raw`, eliminando las que estén en la lista que hemos creado en el punto 1\n",
+    "* Escribir en un archivo las palabras de esta nueva lista. Teniendo una palabra en cada línea.\n",
+    "\n",
+    "**Extra**\n",
     "\n",
     "* Crear una función que:\n",
     "    * lea un archivo de texto\n",
@@ -1210,7 +824,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### CODE"
+    "### CODE\n",
+    "\n",
+    "respuesta = requests.get(\"https://raw.githubusercontent.com/Alir3z4/stop-words/master/spanish.txt\")\n",
+    "\n",
+    "respuesta.raise_for_status()\n",
+    "\n",
+    "texto = respuesta......\n",
+    "\n",
+    "palabras_para_eliminar = texto.split(...)\n",
+    "\n",
+    "\n",
+    "palabras_texto = texto_raw.........\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "palabras_filtradas = [... for ... in ... if ... not in ...]"
    ]
   },
   {
