fix db exercise and add url

--- a/04_databases/00_request_db_comprehensions.ipynb
+++ b/04_databases/00_request_db_comprehensions.ipynb
@@ -950,6 +950,7 @@
     "## Ejercicio 01\n",
     "\n",
     "1. Obtener todas las cartas de la API.\n",
+    "1. Guardar la respuesta en un archivo `.json()`\n",
     "1. La key `colors` contiene un value que es una lista. Filtrar las cartas que contengan `\"Green\"` en esa lista.\n",
     "1. Generar una base de datos con SQLAlchemy para almacenar estas cartas.\n",
     "1. Las columnas que debemos crear son (entre paréntesis está el nombre de la key que tienen en el diccionario):\n",
@@ -999,13 +1000,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "URL = \"https://raw.githubusercontent.com/polyrand/teach/master/04_databases/cartas.json\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "id": "e5lhjDaIa0Xj"
    },
    "outputs": [],
    "source": [
-    "import json\n",
+    "respuesta = requests.get(...)\n",
+    "\n",
+    "cartas = respuesta.json()\n",
     "\n",
     "with open(\"cartas.json\", \"w\") as f:\n",
     "    f.write(json.dumps(cartas))"
