placegoat not working anymore

--- a/04_databases/00_request_db_comprehensions.ipynb
+++ b/04_databases/00_request_db_comprehensions.ipynb
@@ -973,7 +973,7 @@
     "**Extra 🔥**\n",
     "\n",
     "* Crear una función que obtenga la información de la carta de la base de datos en base a un `id` o como queráis.\n",
-    "* En las cartas que no tengan la variable `\"imageUrl\"`, crearla y poner: http://placegoat.com/200/200\n",
+    "* En las cartas que no tengan la variable `\"imageUrl\"`, crearla y poner: https://picsum.photos/200/200\n",
     "* Descargar la imagen de esta carta (o de la cabra 😂) y guardarla en un archivo en el disco.\n",
     "* Crear un archivo JSON que sea una lista de diccionarios con el siguiente formato:\n",
     "\n",
