re-order topics and fix exercises

--- a/00_zero/04_estructuras_de_datos.ipynb
+++ b/00_zero/04_estructuras_de_datos.ipynb
@@ -1386,10 +1386,10 @@
     "## Ejercicio 02\n",
     "\n",
     "Con la lista `lista_miembros`.\n",
-    "* Añadir al final de la lista el item `\"ricardo\"`\n",
+    "* Añadir al final de la lista el item `\"andres\"`\n",
     "* Iterar sobre esta lista:\n",
-    "    * Si el nombre == \"ricardo\": imprimir \"ricardo está aquí\"\n",
-    "    * Si el nombre no es \"ricardo\": imprimir print(\"soy un alumno:\", alumno)\n",
+    "    * Si el nombre == \"andres\": imprimir \"andres está aquí\"\n",
+    "    * Si el nombre no es \"andres\": imprimir print(\"soy un alumno:\", alumno)\n",
     "    \n",
     "**Extra**:\n",
     "* Crear una variable GLOBAL: `x = 0`\n",
@@ -1400,6 +1400,28 @@
     "* Contar el número de veces que aparece una letra dentro de una cadena de texto.\n",
     "    * Opcion 1: lista vacia, iterar sobre caracteres, `.append()`, método `.count()` de una lista...\n",
     "    * Opcion 2: `.count()`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista_miembros = [\n",
+    "    \"susana\",\n",
+    "    \"daniel\",\n",
+    "    \"david\",\n",
+    "    \"jaume\",\n",
+    "    \"carles\",\n",
+    "    \"euro\",\n",
+    "    \"ivan\",\n",
+    "    \"jesus\",\n",
+    "    \"jordi\",\n",
+    "    \"miguel\",\n",
+    "    \"sebastian\",\n",
+    "    \"victor\",\n",
+    "]"
    ]
   },
   {
